remove the need for volumes

--- a/000-default.conf
+++ b/000-default.conf
@@ -9,8 +9,8 @@ ServerName hostname
 <VirtualHost *:443>
   ServerName hostname
   SSLEngine On
-  SSLCertificateFile /ssl/certificate.crt
-  SSLCertificateKeyFile /ssl/certificate.key
+  SSLCertificateFile /run/secrets/certificate.crt
+  SSLCertificateKeyFile /run/secrets/certificate.key
   SSLProxyEngine on
   ProxyPass / http://proxyhost/
   ProxyPassReverse / http://proxyhost/
